--- a/app/views/v1/dashboard-organisations.html
+++ b/app/views/v1/dashboard-organisations.html
@@ -1,33 +1,13 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Dashboard - Organisations - {{serviceName}}
+  Dashboard - Capita - {{serviceName}}
 {% endblock %}
 
 {% block content %}
-<h1 class="govuk-heading-l">Dashboard - Organisations</h1>
+<h1 class="govuk-heading-l">Capita</h1>
 
 <div class="govuk-cards">
-  <div class="govuk-cards__item govuk-cards__item--dashboard">
-    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Services</h2>
-
-    <p class="govuk-heading-xl govuk-!-margin-bottom-5">
-      <span class="govuk-visually-hidden">There are currently</span>
-      6
-      <span class="govuk-visually-hidden">services in the system</span>
-    </p>
-
-    <ul class="govuk-list">
-      <li>
-        <a href="/v1/service-add" class="govuk-link">Add new service</a>
-      </li>
-
-      <li>
-        <a href="/v1/service-list" class="govuk-link">View all services</a>
-      </li>
-    </ul>
-  </div>
-
   <div class="govuk-cards__item govuk-cards__item--dashboard">
     <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Users</h2>
 
