--- a/app/views/v1/dashboard-root.html
+++ b/app/views/v1/dashboard-root.html
@@ -23,7 +23,7 @@
       </li>
 
       <li>
-        <a href="/v1/operator-list" class="govuk-link">View all service groups</a>
+        <a href="/v1/operator-list" class="govuk-link">View service groups</a>
       </li>
     </ul>
   </div>
@@ -43,7 +43,7 @@
       </li>
 
       <li>
-        <a href="/v1/service-list" class="govuk-link">View all services</a>
+        <a href="/v1/service-list" class="govuk-link">View services</a>
       </li>
     </ul>
   </div>
@@ -63,7 +63,7 @@
       </li>
 
       <li>
-        <a href="/v1/organisation-list" class="govuk-link">View all partner organisations</a>
+        <a href="/v1/organisation-list" class="govuk-link">View partner organisations</a>
       </li>
     </ul>
   </div>
@@ -87,7 +87,7 @@
       </li>
 
       <li>
-        <a href="/v1/user-list" class="govuk-link">View all users</a>
+        <a href="/v1/user-list" class="govuk-link">View users</a>
       </ul>
   </div>
 </div>
