--- a/app/views/v1/dashboard-user.html
+++ b/app/views/v1/dashboard-user.html
@@ -5,11 +5,11 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="govuk-heading-l">Dashboard - User</h1>
+<h1 class="govuk-heading-l">Jane Smith</h1>
 
 <div class="govuk-cards">
   <div class="govuk-cards__item govuk-cards__item--dashboard">
-    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Users</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Your account</h2>
 
     <ul class="govuk-list">
       <li>
