--- a/app/views/v1/operator-add-2.html
+++ b/app/views/v1/operator-add-2.html
@@ -7,10 +7,15 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-half">
+    {{ govukBackLink({
+      text: "Back",
+      href: "/v1/operator-add"
+    }) }}
+
     <form action="/v1/operator-add-3" method="post" class="form">
       {{ govukFieldset({
         legend: {
-          text: "Add a service group admin",
+          html: '<span class="govuk-caption-l">Add a new service group</span>Create a service group admin',
           classes: "govuk-fieldset__legend--l",
           isPageHeading: true
         }
@@ -26,20 +31,20 @@
 
       {{ govukInput({
         label: {
-          text: "Service group admin phone number"
-        },
-        id: "operator-admin-phone-number",
-        name: "operator-admin-phone-number",
-        type: "tel"
-      }) }}
-
-      {{ govukInput({
-        label: {
           text: "Service group admin email address"
         },
         id: "operator-admin-email-address",
         name: "operator-admin-email-address",
         type: "email"
+      }) }}
+
+      {{ govukInput({
+        label: {
+          text: "Service group admin phone number"
+        },
+        id: "operator-admin-phone-number",
+        name: "operator-admin-phone-number",
+        type: "tel"
       }) }}
 
       {{ govukButton({
