--- a/app/views/v1/user-list.html
+++ b/app/views/v1/user-list.html
@@ -34,45 +34,96 @@
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Gary Speed</a></th>
-        <td class="govuk-table__cell"><a href="mailto:gary.speed@leedsutd.co.uk" class="govuk-link">gary.speed@leedsutd.co.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:gary.speed@company.gov.uk" class="govuk-link">gary.speed@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Gordon Strachan</a></th>
-        <td class="govuk-table__cell"><a href="mailto:gordon.strachan@leedsutd.co.uk" class="govuk-link">gordon.strachan@leedsutd.co.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:gordon.strachan@company.gov.uk" class="govuk-link">gordon.strachan@company.gov.uk</a></td>
         <td class="govuk-table__cell">G3S</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Gary McAllister</a></th>
-        <td class="govuk-table__cell"><a href="mailto:gary.mcallister@leedsutd.co.uk" class="govuk-link">gary.mcallister@leedsutd.co.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:gary.mcallister@company.gov.uk" class="govuk-link">gary.mcallister@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Tony Dorigo</a></th>
-        <td class="govuk-table__cell"><a href="mailto:tony.dorigo@leedsutd.co.uk" class="govuk-link">tony.dorigo@leedsutd.co.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:tony.dorigo@company.gov.uk" class="govuk-link">tony.dorigo@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Mel Sterland</a></th>
-        <td class="govuk-table__cell"><a href="mailto:mel.sterland@leedsutd.co.uk" class="govuk-link">mel.sterland@leedsutd.co.uk</a></td>
+        <td class="govuk-table__cell"><a href="mailto:mel.sterland@company.gov.uk" class="govuk-link">mel.sterland@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Some Dude</a></th>
-        <td class="govuk-table__cell"><a href="mailto:some.dude@leedsutd.co.uk" class="govuk-link">some.dude@leedsutd.co.uk</a></td>
+        <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">John Doe</a></th>
+        <td class="govuk-table__cell"><a href="mailto:john.doe@company.gov.uk" class="govuk-link">john.doe@company.gov.uk</a></td>
+        <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
+      </tr>
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Jackson Smith</a></th>
+        <td class="govuk-table__cell"><a href="mailto:jackson.smith@company.gov.uk" class="govuk-link">jackson.smith@company.gov.uk</a></td>
+        <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+      </tr>
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Jessie Smith</a></th>
+        <td class="govuk-table__cell"><a href="mailto:jessie.smith@company.gov.uk" class="govuk-link">jessie.smith@company.gov.uk</a></td>
+        <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+      </tr>
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">John Smith</a></th>
+        <td class="govuk-table__cell"><a href="mailto:john.smith@company.gov.uk" class="govuk-link">john.smith@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
     </tbody>
   </table>
+
+  <nav role="navigation" aria-label="Pagination">
+    <div class="pagination__summary">
+      Showing 1 &ndash; 10 of 15 results
+    </div>
+
+    <ul class="pagination">
+      <li class="pagination__item">
+        <span class="pagination__link disabled" aria-label="Previous page">
+          <span aria-hidden="true" role="presentation">&laquo;</span> Previous
+        </span>
+      </li>
+
+      <li class="pagination__item">
+        <span class="pagination__link current" aria-label="Page 1">1</span>
+      </li>
+
+      <li class="pagination__item">
+        <a class="pagination__link" href="/v1/user-list-2" aria-label="Page 2">2</a>
+      </li>
+
+      <li class="pagination__item">
+        <a class="pagination__link" href="/v1/user-list-2" aria-label="Next page">
+          Next <span aria-hidden="true" role="presentation">&raquo;</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+
+  <a href="/v1/dashboard-root" class="govuk-link">Back to dashboard</a>
 {% endblock %}
