--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -68,7 +68,7 @@ $govuk-assets-path: '/govuk/assets/';
 }
 
 /**
- * 'Global' navigation styles taken from:
+ * 'Global' navigation styles taken from: https://dwp-design-examples.herokuapp.com/example/navigation-global
  */
 .navigation-global ul:after {
   content: "";
@@ -143,4 +143,76 @@ $govuk-assets-path: '/govuk/assets/';
   background: #005ea5;
   color: #fff;
   text-decoration: underline;
+}
+
+/**
+ * pagination from: https://home-office-digital-patterns.herokuapp.com/components/pagination
+ */
+.pagination .pagination_list-items {
+  li {
+    display: inline-block;
+
+    a {
+      color: #005EA5;
+      display: inline-block;
+      padding: 15px 5px 10px 5px;
+      margin-right: 15px;
+      text-decoration: none;
+
+      &:focus {
+        outline: 0;
+      }
+    }
+
+    &.active a,
+    &.active a:hover {
+      color: #005EA5;
+      box-shadow: inset 0px -5px 0px 0px #005EA5;
+    }
+  }
+}
+
+.pagination {
+  padding: 0;
+  margin: 0 0 30px;
+  display: inline-block;
+}
+
+.pagination__item {
+  display: inline-block;
+  list-style: none;
+}
+
+.pagination__link {
+  display: block;
+  padding: 5px 10px;
+  text-decoration: none;
+
+  &.current {
+    font-weight: 700;
+  }
+
+  &.current,
+  &.disabled {
+    color: #0B0C0C;
+    border: none;
+    pointer-events: none;
+    cursor: default;
+    font-family: $govuk-font-family;
+  }
+}
+
+a.pagination__link:hover,
+a.pagination__link:focus {
+  background: #F8F8F8;
+  outline: 3px solid #FFBF47;
+}
+
+.pagination__summary {
+  font-family: $govuk-font-family;
+  line-height: 30px;
+
+  @media (min-width: 642px) {
+    float: right;
+  }
 }
