--- a/app/views/includes/organisation-access-rights.html
+++ b/app/views/includes/organisation-access-rights.html
@@ -17,6 +17,14 @@
       checked: checked("['organisation-admin-access-rights']", "Service Admin")
     },
     {
+      value: "Partner Organisation Admin",
+      text: "Partner Organisation Admin",
+      hint: {
+        html: "Admin for a set of users who do not work for DWP, such as a supplier or local authority<br>Invite users who don’t work for DWP to their service"
+      },
+      checked: checked("['operator-admin-access-rights']", "Partner Organisation Admin")
+    },
+    {
       value: "User",
       text: "User",
       hint: {
