--- a/app/views/v1/operator-confirmation.html
+++ b/app/views/v1/operator-confirmation.html
@@ -6,13 +6,16 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  {{ govukPanel({
-    titleText: "Service group added: " + data["operator-name"],
-    html: "Some additional helpful text here"
-  }) }}
+  <div class="govuk-grid-column-two-thirds">
+    {{ govukPanel({
+      titleText: data["operator-name"] + "service group created"
+    }) }}
 
-  <a href="/v1/operator-list" class="govuk-link">View all service groups</a><br>
-  <a href="/v1/operator-add" class="govuk-link">Add another service group</a><br>
-  <a href="/v1/dashboard-root" class="govuk-link">Go to the dashboard</a>
+    <p>An invitation has been sent to xxxx@xxxx.xxxx</p>
+
+    <!--<a href="/v1/operator-list" class="govuk-link">View all service groups</a><br>
+    <a href="/v1/operator-add" class="govuk-link">Add another service group</a><br>-->
+    <a href="/v1/dashboard-root" class="govuk-link">Go to the dashboard</a>
+  </div>
 </div>
 {% endblock %}
