--- a/app/views/v1/operator-edit-3.html
+++ b/app/views/v1/operator-edit-3.html
@@ -7,6 +7,11 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-half">
+    {{ govukBackLink({
+      text: "Back",
+      href: "/v1/operator-summary"
+    }) }}
+
     <form action="/v1/operator-summary" method="post" class="form">
       {{ govukFieldset({
         legend: {
