--- a/app/views/v1/service-confirmation.html
+++ b/app/views/v1/service-confirmation.html
@@ -6,13 +6,16 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  {{ govukPanel({
-    titleText: "Service added: " + data["service-name"],
-    html: "Some additional helpful text here"
-  }) }}
+  <div class="govuk-grid-column-two-thirds">
+    {{ govukPanel({
+      titleText: data["service-name"] + " service created"
+    }) }}
 
-  <a href="/v1/service-list" class="govuk-link">View all services</a><br>
-  <a href="/v1/service-add" class="govuk-link">Add another service</a><br>
-  <a href="/v1/dashboard-root" class="govuk-link">Go to the dashboard</a>
+    <p>An invitation has been sent to xxxx@xxxx.xxxx</p>
+
+    <!--<a href="/v1/service-list" class="govuk-link">View all services</a><br>
+    <a href="/v1/service-add" class="govuk-link">Add another service</a><br>-->
+    <a href="/v1/dashboard-root" class="govuk-link">Go to the dashboard</a>
+  </div>
 </div>
 {% endblock %}
