--- a/app/views/v1/service-summary.html
+++ b/app/views/v1/service-summary.html
@@ -32,48 +32,14 @@
         text: "Full name"
       },
       value: {
-        html: data["service-admin-full-name"]
+        html: data["service-admin-full-name"] + "<br>" + data["service-admin-email-address"]
       },
       actions: {
         items: [
           {
             href: "/v1/service-edit",
             text: "Change",
-            visuallyHiddenText: "service admin full name"
-          }
-        ]
-      }
-    },
-    {
-      key: {
-        text: "Phone number"
-      },
-      value: {
-        html: data["service-admin-phone-number"]
-      },
-      actions: {
-        items: [
-          {
-            href: "/v1/service-edit",
-            text: "Change",
-            visuallyHiddenText: "service admin phone number"
-          }
-        ]
-      }
-    },
-    {
-      key: {
-        text: "Email address"
-      },
-      value: {
-        html: data["service-admin-email-address"]
-      },
-      actions: {
-        items: [
-          {
-            href: "/v1/service-edit",
-            text: "Change",
-            visuallyHiddenText: "service admin email address"
+            visuallyHiddenText: "service admin details"
           }
         ]
       }
