Update nav links

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -66,19 +66,19 @@
       </li>
 
       <li>
-        <a href="/v1/dashboard-operators" {% if activeNav == 'operators' %}class="active" aria-current="page"{% endif %}>Service groups</a>
+        <a href="/v1/operator-list" {% if activeNav == 'operators' %}class="active" aria-current="page"{% endif %}>Service groups</a>
       </li>
 
       <li>
-        <a href="/v1/dashboard-services" {% if activeNav == 'services' %}class="active" aria-current="page"{% endif %}>Services</a>
+        <a href="/v1/service-list" {% if activeNav == 'services' %}class="active" aria-current="page"{% endif %}>Services</a>
       </li>
 
       <li>
-        <a href="/v1/dashboard-organisations" {% if activeNav == 'organisations' %}class="active" aria-current="page"{% endif %}>Organisations</a>
+        <a href="/v1/organisation-list" {% if activeNav == 'organisations' %}class="active" aria-current="page"{% endif %}>Organisations</a>
       </li>
 
       <li>
-        <a href="/v1/dashboard-user" {% if activeNav == 'users' %}class="active" aria-current="page"{% endif %}>Users</a>
+        <a href="/v1/user-list" {% if activeNav == 'users' %}class="active" aria-current="page"{% endif %}>Users</a>
       </li>
     </ul>
   </nav>
