Some wording changes, update user view page

--- a/app/views/v1/operator-add-2.html
+++ b/app/views/v1/operator-add-2.html
@@ -23,7 +23,7 @@
 
       {{ govukInput({
         label: {
-          text: "Service group admin full name"
+          text: "Name"
         },
         id: "operator-admin-full-name",
         name: "operator-admin-full-name"
@@ -31,7 +31,7 @@
 
       {{ govukInput({
         label: {
-          text: "Service group admin email address"
+          text: "Email address"
         },
         id: "operator-admin-email-address",
         name: "operator-admin-email-address",
@@ -40,7 +40,7 @@
 
       {{ govukInput({
         label: {
-          text: "Service group admin phone number"
+          text: "Phone number"
         },
         id: "operator-admin-phone-number",
         name: "operator-admin-phone-number",
