--- a/app/views/v1/organisation-add.html
+++ b/app/views/v1/organisation-add.html
@@ -26,7 +26,7 @@
 
       {{ govukInput({
         label: {
-          text: "Partner organisation admin full name"
+          text: "Admin full name"
         },
         id: "organisation-admin-full-name",
         name: "organisation-admin-full-name"
@@ -34,7 +34,7 @@
 
       {{ govukInput({
         label: {
-          text: "Partner organisation admin email address"
+          text: "Admin email address"
         },
         id: "organisation-admin-email-address",
         name: "organisation-admin-email-address",
