--- a/app/views/v1/organisation-edit.html
+++ b/app/views/v1/organisation-edit.html
@@ -27,7 +27,7 @@
 
       {{ govukInput({
         label: {
-          text: "Organisation admin full name"
+          text: "Admin full name"
         },
         id: "organisation-admin-full-name",
         name: "organisation-admin-full-name",
@@ -36,7 +36,7 @@
 
       {{ govukInput({
         label: {
-          text: "Organisation admin email address"
+          text: "Admin email address"
         },
         id: "organisation-admin-email-address",
         name: "organisation-admin-email-address",
