--- a/app/views/v1/service-add.html
+++ b/app/views/v1/service-add.html
@@ -26,7 +26,7 @@
 
       {{ govukInput({
         label: {
-          text: "Service admin full name"
+          text: "Admin name"
         },
         id: "service-admin-full-name",
         name: "service-admin-full-name"
@@ -34,7 +34,7 @@
 
       {{ govukInput({
         label: {
-          text: "Service admin email address"
+          text: "Admin email address"
         },
         id: "service-admin-email-address",
         name: "service-admin-email-address",
