--- a/app/views/v1/service-edit.html
+++ b/app/views/v1/service-edit.html
@@ -27,7 +27,7 @@
 
       {{ govukInput({
         label: {
-          text: "Service admin full name"
+          text: "Admin name"
         },
         id: "service-admin-full-name",
         name: "service-admin-full-name",
@@ -36,7 +36,7 @@
 
       {{ govukInput({
         label: {
-          text: "Service admin email address"
+          text: "Admin email address"
         },
         id: "service-admin-email-address",
         name: "service-admin-email-address",
