--- a/app/views/v1/user-add.html
+++ b/app/views/v1/user-add.html
@@ -18,7 +18,7 @@
 
       {{ govukInput({
         label: {
-          text: "Full name"
+          text: "Name"
         },
         id: "user-full-name",
         name: "user-full-name"
