--- a/app/views/v1/user-view.html
+++ b/app/views/v1/user-view.html
@@ -12,7 +12,7 @@
           text: "Name"
         },
         value: {
-          text: data['user-first-name'] + " " + data['user-last-name']
+          text: data['user-full-name']
         }
       },
       {
@@ -36,13 +36,13 @@
           text: "Status"
         },
         value: {
-          html: '<span class="govuk-tag govuk-tag--inactive">Active</span>'
+          html: '<span class="govuk-tag govuk-tag">Active</span>'
         }
       }
     ]
   }) }}
 
   <a href="/v1/user-edit" class="govuk-button">Edit user</a>
-  <a href="#" class="govuk-button">Re-send invite</a>
+  <a href="#" class="govuk-button govuk-button--secondary">Re-send invite</a>
   <a href="/v1/user-confirmation--delete" class="govuk-button govuk-button--warning">Delete user</a>
 {% endblock %}
