--- a/app/views/v1/organisation-list.html
+++ b/app/views/v1/organisation-list.html
@@ -3,9 +3,9 @@
 {% block pageTitle %}{% endblock %}
 
 {% block content %}
-<h1 class="govuk-heading-l">Organisations</h1>
+<h1 class="govuk-heading-l">Partner organisations</h1>
 
-<a href="/v1/organisation-add" class="govuk-button">Add new organisation</a>
+<a href="/v1/organisation-add" class="govuk-button">Add new partner organisation</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
