--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -74,7 +74,7 @@
       </li>
 
       <li>
-        <a href="/v1/organisation-list" {% if activeNav == 'organisations' %}class="active" aria-current="page"{% endif %}>Organisations</a>
+        <a href="/v1/organisation-list" {% if activeNav == 'organisations' %}class="active" aria-current="page"{% endif %}>Partner organisations</a>
       </li>
 
       <li>
