Change permissions role name

--- a/app/views/includes/user-access-rights.html
+++ b/app/views/includes/user-access-rights.html
@@ -17,7 +17,7 @@
       checked: checked("['user-access-rights']", "System Admin")
     },
     {
-      value: "Group Admin",
+      value: "Service Group Admin",
       text: "Group Admin",
       hint: {
         html: "Admin for services used by a specific part of DWP<br>Add services to their group<br>Invite service admins<br>Invite users to their services"
