--- a/app/views/includes/operator-access-rights.html
+++ b/app/views/includes/operator-access-rights.html
@@ -9,7 +9,7 @@
   },
   items: [
     {
-      value: "Sercvice Group Admin",
+      value: "Service Group Admin",
       text: "Group Admin",
       hint: {
         html: "Admin for services used by a specific part of DWP<br>Add services to their group<br>Invite service admins<br>Invite users to their services"
