--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,20 +7,160 @@
 {% block content %}
   {{releaseVersion | log}}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-l">
-        {{serviceName}}
-        <span class="govuk-caption-xl">v1</span>
-      </h1>
-
-      <p class="govuk-caption-m">
-        Created: <time datetime="2019-10-09">16 October 2019</time>
-      </p>
-
-      <h2 class="govuk-heading-m">Initial prototype</h2>
-
-      <a href="/v1/dashboard-root" class="govuk-button">Open prototype</a>
+    <div class="govuk-grid-row">
+        <h1 class="govuk-heading-xl">
+            {{serviceName}}
+        </h1>
     </div>
-  </div>
+
+    <div class="govuk-grid-row">
+        <div class="govuk-tabs" data-module="tabs">
+            <h2 class="govuk-tabs__title">
+                Prototype versions
+            </h2>
+
+            {% set currentVersionHtml %}
+                <span class="govuk-caption-l">
+                    <time datetime="2019-10-09">16 October 2019</time>
+                </span>
+
+                <h2 class="govuk-heading-l">v1</h2>
+
+                <h2 class="govuk-heading-m">UR Goals</h2>
+
+                <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                        To understand more about the role of service management
+                    </li>
+
+                    <li>
+                        To explore the journey for a system admin adding a service group.
+
+                        <ul class="govuk-list govuk-list--bullet">
+                            <li>
+                                Check understanding of the dashboard
+                            </li>
+
+                            <li>
+                                Explore whether the flow of the journey/screens make sense to users
+                            </li>
+
+                            <li>
+                                Explore users understanding of the permissions/roles
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <a href="/v1/dashboard-root" class="govuk-button">Open prototype</a>
+            {% endset %}
+
+            {% set previousVersionsHtml %}
+                <span class="govuk-caption-l">
+                    <time datetime="2019-10-09">16 October 2019</time>
+                </span>
+
+                <h2 class="govuk-heading-l">version number</h2>
+                <h2 class="govuk-heading-m">Iterations made</h2>
+
+                <table class="govuk-table">
+                    <thead class="govuk-table__head">
+                        <tr class="govuk-table__row">
+                            <th class="govuk-table__header" scope="col">User research finding</th>
+                            <th class="govuk-table__header" scope="col">Potential solutions</th>
+                            <th class="govuk-table__header" scope="col">Iteration made</th>
+                        </tr>
+                    </thead>
+
+                    <tbody class="govuk-table__body">
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell">Finding 1</td>
+                            <td class="govuk-table__cell">Interpretation 1</td>
+                            <td class="govuk-table__cell">Iteration 1</td>
+                        </tr>
+
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell">Finding 2</td>
+                            <td class="govuk-table__cell">Interpretation 2</td>
+                            <td class="govuk-table__cell">Iteration 2</td>
+                        </tr>
+
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell">Finding 3</td>
+                            <td class="govuk-table__cell">Interpretation 3</td>
+                            <td class="govuk-table__cell">Iteration 3</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <h3 class="govuk-heading-m">Confidence level</h3>
+
+                <details class="govuk-details" role="group">
+                    <summary class="govuk-details__summary" role="button" aria-controls="details-content-confidence-levels" aria-expanded="false">
+                        <span class="govuk-details__summary-text">
+                            What is this?
+                        </span>
+                    </summary>
+
+                    <div class="govuk-details__text" id="details-content-confidence-levels" aria-hidden="true">
+                        Confidence can rise and fall in the course of a user journey, depending on what we know at that time. This helps the team, and the wider organisation, understand and prioritise what needs more work.
+                    </div>
+                </details>
+
+                <table class="govuk-table">
+                    <thead class="govuk-table__head">
+                        <tr class="govuk-table__row">
+                            <th class="govuk-table__header" scope="col">User journey step</th>
+                            <th class="govuk-table__header" scope="col">Confidence</th>
+                        </tr>
+                    </thead>
+
+                    <tbody class="govuk-table__body">
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell"><a href="#">Start page</a></td>
+                            <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
+                        </tr>
+
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell"><a href="#">Confirm email</a></td>
+                            <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        </tr>
+
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell"><a href="#">Landing page</a></td>
+                            <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <h3 class="govuk-heading-m">Useful links</h3>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a class="govuk-link" href="#">Discussion guide</a>
+                    </li>
+
+                    <li>
+                        <a class="govuk-link" href="#">Research plan</a>
+                    </li>
+
+                    <li>
+                        <a class="govuk-link" href="#">User videos</a>
+                    </li>
+                </ul>
+            {% endset %}
+
+            {{ govukTabs({
+                items: [
+                    {
+                        label: "Current version",
+                        id: "current-version",
+                        panel: {
+                            html: currentVersionHtml
+                        }
+                    }
+                ]
+            }) }}
+        </div>
+    </div>
 {% endblock %}
