Change service group admin name

--- a/app/views/includes/operator-access-rights.html
+++ b/app/views/includes/operator-access-rights.html
@@ -10,7 +10,7 @@
   items: [
     {
       value: "Service Group Admin",
-      text: "Group Admin",
+      text: "Service Group Admin",
       hint: {
         html: "Admin for services used by a specific part of DWP<br>Add services to their group<br>Invite service admins<br>Invite users to their services"
       },
