--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -32,41 +32,6 @@ $govuk-assets-path: '/govuk/assets/';
   }
 }
 
-.govuk-cards::after {
-  content: '';
-  display: block;
-  clear: both;
-}
-
-.govuk-cards__item {
-  box-sizing: border-box;
-
-  @include govuk-media-query($until: tablet) {
-    margin-bottom: 20px;
-  }
-
-  @include govuk-media-query($from: tablet) {
-    float: left;
-    margin-bottom: 40px;
-  }
-
-  @include govuk-media-query($from: desktop) {
-    width: 33.333333%;
-
-    &:not(:nth-child(3n+3)) {
-      padding-right: 20px;
-    }
-  }
-
-  @include govuk-media-query($from: tablet, $until: desktop) {
-    width: 50%;
-
-    &:not(:nth-child(2n+2)) {
-      padding-right: 15px;
-    }
-  }
-}
-
 /**
  * 'Global' navigation styles taken from: https://dwp-design-examples.herokuapp.com/example/navigation-global
  */
@@ -174,7 +139,7 @@ $govuk-assets-path: '/govuk/assets/';
 
 .pagination {
   padding: 0;
-  margin: 0 0 30px;
+  margin: 0;
   display: inline-block;
 }
 
@@ -218,7 +183,7 @@ a.pagination__link:focus {
 }
 
 /**
- *
+ * Tags for confidence states
  */
  .govuk-tag--high {
     background-color: #006435;
@@ -232,3 +197,93 @@ a.pagination__link:focus {
  .govuk-tag--low {
     background-color: #b10e1e;
  }
+
+/**
+ * Dashbaord cards
+ */
+
+.govuk-cards__item {
+    box-sizing: border-box;
+
+    @include govuk-media-query($until: tablet) {
+      margin-bottom: 20px;
+    }
+
+    @include govuk-media-query($from: tablet) {
+      float: left;
+      margin-bottom: 40px;
+    }
+
+    @include govuk-media-query($from: desktop) {
+    width: 33.333333%;
+
+      &:not(:nth-child(3n+3)) {
+        padding-right: 20px;
+      }
+    }
+
+    @include govuk-media-query($from: tablet, $until: desktop) {
+        width: 50%;
+
+      &:not(:nth-child(2n+2)) {
+        padding-right: 15px;
+      }
+    }
+}
+
+/**
+ * V2 cards with background colour
+ */
+.govuk-cards--2 {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.govuk-cards::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.govuk-cards--2__item {
+  box-sizing: border-box;
+  border: 1px solid rgb(200, 200, 200);
+  background-color: rgb(248, 248, 248);
+  padding: 20px;
+  margin-bottom: 20px;
+
+  :last-child {
+      margin-bottom: 0;
+  }
+
+  @include govuk-media-query($from: desktop) {
+    flex: 0 1 calc(33.333333% - 14px);
+
+    &:not(:nth-child(3n+3)) {
+      margin-right: 20px;
+    }
+  }
+
+  @include govuk-media-query($from: tablet, $until: desktop) {
+    flex: 0 1 calc(50% - 8px);
+
+    &:not(:nth-child(2n+2)) {
+      margin-right: 15px;
+    }
+  }
+
+  @include govuk-media-query($until: tablet) {
+    flex: 1 0 100%;
+  }
+}
+
+/**
+ * Main positioning and styles for 'add' buttons on listing pages (v2)
+ */
+.govuk-heading-l.listing-page {
+    float: left;
+}
+
+.govuk-button.listing-page {
+    float: right;
+}
