--- a/app/views/v1/dashboard-root.html
+++ b/app/views/v1/dashboard-root.html
@@ -4,6 +4,12 @@
   Dashboard - System - {{serviceName}}
 {% endblock %}
 
+{% block header %}
+    {{ super() }}
+
+    {% include "v1/includes/nav.html" %}
+{% endblock %}
+
 {% block content %}
 <h1 class="govuk-heading-l">Dashboard - System</h1>
 
