--- a/app/views/v1/operator-list.html
+++ b/app/views/v1/operator-list.html
@@ -2,6 +2,12 @@
 
 {% block pageTitle %}Service groups - {{serviceName}}{% endblock %}
 
+{% block header %}
+    {{ super() }}
+
+    {% include "v1/includes/nav.html" %}
+{% endblock %}
+
 {% block content %}
   <h1 class="govuk-heading-l">Service groups</h1>
 
