--- a/app/views/v1/organisation-add.html
+++ b/app/views/v1/organisation-add.html
@@ -4,6 +4,12 @@
   Add new partner organisation - {{serviceName}}
 {% endblock %}
 
+{% block header %}
+    {{ super() }}
+
+    {% include "v1/includes/nav.html" %}
+{% endblock %}
+
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-half">
